# TextPulse-AI

./: .env.example  .gitignore  README.md  docker-compose.yml
.claude/: launch.json
apps/api/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  railway.json
apps/api/alembic/: env.py
apps/api/alembic/versions/: f4c9da5f1d8b_initial_schema.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: deps.py  router.py
apps/api/app/api/routes/: __init__.py  analysis.py  auth.py  billing.py  compare.py  contacts.py  health.py  imports.py  qa.py  reply_coach.py  vault.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: session.py
apps/api/app/models/: __init__.py  entities.py
apps/api/app/schemas/: auth.py  common.py  contacts.py  imports.py  qa.py  reply_coach.py  vault.py
apps/api/app/seed/: default_categories.py
apps/api/app/services/: analysis_engine.py  analytics.py  behavioral_intel.py  import_jobs.py  import_previews.py  imports.py  llm.py  qa.py  reply_coach.py  storage.py  text_utils.py
apps/api/app/services/parsers/: __init__.py  android_sms.py  base.py  csv_text.py  imessage.py  instagram.py  ios_backup.py  screenshot.py  telegram.py  whatsapp.py
apps/api/app/workers/: __init__.py  celery_app.py  tasks.py
apps/api/tests/: test_import_uploads.py  test_ios_backup.py  test_llm_policy.py  test_parser_files.py  test_smoke.py
apps/web/: Dockerfile  README.md  package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: ui.tsx  (+6 more)
docs/: export-guides.md  privacy.md
(+6 files in other folders)
